force-app/main/default/objects/PSWheelTemplate__c/PSWheelTemplate__c.object-meta.xml
<CustomObject>
    <label>PSWheelTemplate</label>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>Template ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSWheelTemplate</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>