force-app/main/default/objects/PSWheelTemplate__c/fields/Center_Image_Default__c.field-meta.xml
<CustomField>
    <fullName>Center_Image_Default__c</fullName>
    <label>Center Image Default</label>
    <length>255</length>
    <type>Text</type>
</CustomField>