force-app/main/default/objects/PSWheelTemplate__c/fields/Center_Label_Field__c.field-meta.xml
<CustomField>
    <fullName>Center_Label_Field__c</fullName>
    <label>Center Label Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>