force-app/main/default/objects/PSWheelTemplate__c/fields/Child_Filter_Clause__c.field-meta.xml
<CustomField>
    <fullName>Child_Filter_Clause__c</fullName>
    <label>Child Filter Clause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>