force-app/main/default/objects/PSWheelTemplate__c/fields/Child_Label_Field__c.field-meta.xml
<CustomField>
    <fullName>Child_Label_Field__c</fullName>
    <label>Child Label Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>