force-app/main/default/objects/PSWheelTemplate__c/fields/Child_Match_Field__c.field-meta.xml
<CustomField>
    <fullName>Child_Match_Field__c</fullName>
    <inlineHelpText>The API field name on child object to use for matching value</inlineHelpText>
    <label>Child Match Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>