force-app/main/default/objects/PSWheelTemplate__c/fields/Child_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Object_API_Name__c</fullName>
    <label>Child Object API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>