force-app/main/default/objects/PSWheelTemplate__c/fields/Child_Parent_Field__c.field-meta.xml
<CustomField>
    <fullName>Child_Parent_Field__c</fullName>
    <inlineHelpText>The API field name on child object that is relationship to parent record</inlineHelpText>
    <label>Child Parent Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>