force-app/main/default/objects/PSWheelTemplate__c/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <label>Template Name</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>